--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,444 +1,84 @@
+/* to make lines scroll instead of wrap */
+/* from http://stackoverflow.com/a/23393920 */
+
+.highlight pre code * {
+  white-space: nowrap;    // this sets all children inside to nowrap
+}
+
+.highlight pre {
+  overflow-x: auto;       // this sets the scrolling in x
+}
+
+.highlight pre code {
+  white-space: pre;       // forces <code> to respect <pre> formatting
+}
+
+
 /*
- * pygments14.css
- * ~~~~~~~~~~~~~~
- *
- * Sphinx stylesheet -- pygments14 theme.  Heavily copied from sphinx13.
- *
- * :copyright: Copyright 2006-2014 by the Pygments team, see AUTHORS.
- * :license: BSD, see LICENSE for details.
- *
+ * GitHub style for Pygments syntax highlighter, for use with Jekyll
+ * Courtesy of GitHub.com
  */
 
-@import url("basic.css");
-
-/* -- page layout ----------------------------------------------------------- */
-
-body {
-    font-family: PT Sans, 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva',
-                 'Verdana', sans-serif;
-    font-size: 14px;
-    text-align: center;
-    background-image: url(bodybg.png);
-    background-color: #f9f9f9;
-    color: black;
-    padding: 0;
-    /*
-    border-right: 1px solid #66b55e;
-    border-left: 1px solid #66b55e;
-    */
-
-    margin: 0 auto;
-    min-width: 780px;
-    max-width: 1080px;
-}
-
-.outerwrapper {
-    background-image: url(docbg.png);
-    background-attachment: fixed;
-}
-
-.pageheader {
-    text-align: left;
-    padding: 10px 15px;
-}
-
-.pageheader ul {
-    float: right;
-    color: white;
-    list-style-type: none;
-    padding-left: 0;
-    margin-top: 40px;
-    margin-right: 10px;
-}
-
-.pageheader li {
-    float: left;
-    margin: 0 0 0 10px;
-}
-
-.pageheader li a {
-    border-radius: 3px;
-    padding: 8px 12px;
-    color: #666666;
-    text-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-}
-
-.pageheader li a:hover {
-    background-color: #f4cd00;
-    color: black;
-    text-shadow: none;
-}
-
-div.document {
-    text-align: left;
-    /*border-left: 1em solid #fffbe3;*/
-}
-
-div.bodywrapper {
-    margin: 0 12px 0 240px;
-    background-color: white;
-/*    border-right: 1px solid #66b55e; */
-}
-
-div.fullbodywrapper {
-    margin: 0 12px;
-    background-color: white;
-}
-
-div.body {
-    margin: 0;
-    padding: 0.5em 20px 20px 20px;
-}
-
-div.related {
-    font-size: 1em;
-    color: #666666;
-}
-
-div.related ul {
-    background-image: url(relbg.png);
-    background-repeat: repeat-y;
-    background-color: #f4cd00;
-    height: 1.9em;
-    /*
-    border-top: 1px solid #66b55e;
-    border-bottom: 1px solid #66b55e;
-    */
-}
-
-div.related ul li {
-    margin: 0 5px 0 0;
-    padding: 0;
-    float: left;
-}
-
-div.related ul li.right {
-    float: right;
-    margin-right: 5px;
-}
-
-div.related ul li a {
-    margin: 0;
-    padding: 0 5px 0 5px;
-    line-height: 1.75em;
-    color: #666666;
-    /*text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);*/
-}
-
-div.related ul li a:hover {
-    text-decoration: underline;
-    text-shadow: 0px 0px 1px rgba(255, 255, 255, 0.5);
-}
-
-div.sphinxsidebarwrapper {
-    position: relative;
-    top: 0px;
-    padding: 0;
-}
-
-div.sphinxsidebar {
-    margin: 0;
-    padding: 0 0px 15px 15px;
-    width: 210px;
-    float: left;
-    font-size: 1em;
-    text-align: left;
-}
-
-div.sphinxsidebar .logo {
-    font-size: 1.8em;
-    color: #666;
-    font-weight: 300;
-    text-align: center;
-}
-
-div.sphinxsidebar .logo img {
-    vertical-align: middle;
-}
-
-div.sphinxsidebar input {
-    border: 1px solid #aaa;
-    font-family: PT Sans, 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva',
-                 'Verdana', sans-serif;
-    font-size: 1em;
-}
-
-div.sphinxsidebar h3 {
-    font-size: 1.5em;
-    /* border-top: 1px solid #66b55e; */
-    margin-top: 1em;
-    margin-bottom: 0.5em;
-    padding-top: 0.5em;
-}
-
-div.sphinxsidebar h4 {
-    font-size: 1.2em;
-    margin-bottom: 0;
-}
-
-div.sphinxsidebar h3, div.sphinxsidebar h4 {
-    margin-right: -15px;
-    margin-left: -15px;
-    padding-right: 14px;
-    padding-left: 14px;
-    color: #333;
-    font-weight: 300;
-    /*text-shadow: 0px 0px 0.5px rgba(0, 0, 0, 0.4);*/
-}
-
-div.sphinxsidebarwrapper > h3:first-child {
-    margin-top: 0.5em;
-    border: none;
-}
-
-div.sphinxsidebar h3 a {
-    color: #333;
-}
-
-div.sphinxsidebar ul {
-    color: #444;
-    margin-top: 7px;
-    padding: 0;
-    line-height: 130%;
-}
-
-div.sphinxsidebar ul ul {
-    margin-left: 20px;
-    list-style-image: url(listitem.png);
-}
-
-div.footer {
-    color: #666666;
-    text-shadow: 0 0 .2px rgba(255, 255, 255, 0.8);
-    padding: 2em;
-    text-align: center;
-    clear: both;
-    font-size: 0.8em;
-}
-
-#try {
-    clear: both;
-    background-color: #f6f6f6;
-    border-radius: 5px;
-    border: 1px solid #ddd;
-    margin-top: 15px;
-    padding: 10px 15px 5px 10px;
-}
-
-#try h2 {
-    margin-top: 0;
-}
-
-#try textarea {
-    border: 1px solid #999;
-    padding: 2px;
-    width: 100%;
-    min-height: 150px;
-}
-
-#filter_form {
-    float: right;
-    background-color: #f6f6f6;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 10px;
-    margin-bottom: 15px;
-    clear: right;
-}
-
-.syntax {
-    clear: both;
-}
-
-.syntax pre {
-    background-color: transparent;
-}
-
-/* -- body styles ----------------------------------------------------------- */
-
-p {    
-    margin: 0.8em 0 0.5em 0;
-}
-
-a {
-    color: #36852e;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #d4ad00;
-}
-
-div.body a {
-    text-decoration: underline;
-}
-
-h1 {
-    margin: 10px 0 0 0;
-    font-size: 2.4em;
-    color: #666666;
-    font-weight: 300;
-}
-
-h2 {
-    margin: 1.em 0 0.2em 0;
-    font-size: 1.5em;
-    font-weight: 300;
-    padding: 0;
-    color: #36852e;
-}
-
-h3 {
-    margin: 1em 0 -0.3em 0;
-    font-size: 1.3em;
-    font-weight: 300;
-}
-
-div.body h1 a, div.body h2 a, div.body h3 a, div.body h4 a, div.body h5 a, div.body h6 a {
-    text-decoration: none;
-}
-
-div.body h1 a tt, div.body h2 a tt, div.body h3 a tt, div.body h4 a tt, div.body h5 a tt, div.body h6 a tt {
-    color: #36852e !important;
-    font-size: inherit !important;
-}
-
-a.headerlink {
-    color: #66b55e !important;
-    font-size: 12px;
-    margin-left: 6px;
-    padding: 0 4px 0 4px;
-    text-decoration: none !important;
-    float: right;
-}
-
-a.headerlink:hover {
-    background-color: #ccc;
-    color: white!important;
-}
-
-cite, code, tt {
-    font-family: 'Consolas', 'DejaVu Sans Mono',
-                 'Bitstream Vera Sans Mono', monospace;
-    font-size: 14px;
-    letter-spacing: -0.02em;
-}
-
-tt {
-    background-color: #f2f2f2;
-    border: 1px solid #ddd;
-    border-radius: 2px;
-    color: #333;
-    padding: 1px;
-}
-
-tt.descname, tt.descclassname, tt.xref {
-    border: 0;
-}
-
-hr {
-    border: 1px solid #abc;
-    margin: 2em;
-}
-
-a tt {
-    border: 0;
-    color: #36852e;
-}
-
-a tt:hover {
-    color: #d4ad00;
-}
-
-pre {
-    font-family: 'Consolas', 'DejaVu Sans Mono',
-                 'Bitstream Vera Sans Mono', monospace;
-    font-size: 13px;
-    letter-spacing: 0.015em;
-    line-height: 120%;
-    padding: 0.5em;
-    border: 1px solid #ccc;
-    border-radius: 2px;
-    background-color: #f8f8f8;
-}
-
-pre a {
-    color: inherit;
-    text-decoration: underline;
-}
-
-td.linenos pre {
-    padding: 0.5em 0;
-}
-
-div.quotebar {
-    background-color: #f8f8f8;
-    max-width: 250px;
-    float: right;
-    padding: 0px 7px;
-    border: 1px solid #ccc;
-    margin-left: 1em;
-}
-
-div.topic {
-    background-color: #f8f8f8;
-}
-
-table {
-    border-collapse: collapse;
-    margin: 0 -0.5em 0 -0.5em;
-}
-
-table td, table th {
-    padding: 0.2em 0.5em 0.2em 0.5em;
-}
-
-div.admonition, div.warning {
-    font-size: 0.9em;
-    margin: 1em 0 1em 0;
-    border: 1px solid #86989B;
-    border-radius: 2px;
-    background-color: #f7f7f7;
-    padding: 0;
-}
-
-div.admonition p, div.warning p {
-    margin: 0.5em 1em 0.5em 1em;
-    padding: 0;
-}
-
-div.admonition pre, div.warning pre {
-    margin: 0.4em 1em 0.4em 1em;
-}
-
-div.admonition p.admonition-title,
-div.warning p.admonition-title {
-    margin-top: 1em;
-    padding-top: 0.5em;
-    font-weight: bold;
-}
-
-div.warning {
-    border: 1px solid #940000;
-/*    background-color: #FFCCCF;*/
-}
-
-div.warning p.admonition-title {
-}
-
-div.admonition ul, div.admonition ol,
-div.warning ul, div.warning ol {
-    margin: 0.1em 0.5em 0.5em 3em;
-    padding: 0;
-}
-
-.viewcode-back {
-    font-family: PT Sans, 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva',
-                 'Verdana', sans-serif;
-}
-
-div.viewcode-block:target {
-    background-color: #f4debf;
-    border-top: 1px solid #ac9;
-    border-bottom: 1px solid #ac9;
-}
+.highlight pre, pre, .highlight .hll { background-color: #f8f8f8; border: 1px solid #ccc; padding: 6px 10px; border-radius: 3px; }
+.highlight .c { color: #999988; font-style: italic; }
+.highlight .err { color: #a61717; background-color: #e3d2d2; }
+.highlight .k { font-weight: bold; }
+.highlight .o { font-weight: bold; }
+.highlight .cm { color: #999988; font-style: italic; }
+.highlight .cp { color: #999999; font-weight: bold; }
+.highlight .c1 { color: #999988; font-style: italic; }
+.highlight .cs { color: #999999; font-weight: bold; font-style: italic; }
+.highlight .gd { color: #000000; background-color: #ffdddd; }
+.highlight .gd .x { color: #000000; background-color: #ffaaaa; }
+.highlight .ge { font-style: italic; }
+.highlight .gr { color: #aa0000; }
+.highlight .gh { color: #999999; }
+.highlight .gi { color: #000000; background-color: #ddffdd; }
+.highlight .gi .x { color: #000000; background-color: #aaffaa; }
+.highlight .go { color: #888888; }
+.highlight .gp { color: #555555; }
+.highlight .gs { font-weight: bold; }
+.highlight .gu { color: #800080; font-weight: bold; }
+.highlight .gt { color: #aa0000; }
+.highlight .kc { font-weight: bold; }
+.highlight .kd { font-weight: bold; }
+.highlight .kn { font-weight: bold; }
+.highlight .kp { font-weight: bold; }
+.highlight .kr { font-weight: bold; }
+.highlight .kt { color: #445588; font-weight: bold; }
+.highlight .m { color: #009999; }
+.highlight .s { color: #dd1144; }
+.highlight .n { color: #333333; }
+.highlight .na { color: teal; }
+.highlight .nb { color: #0086b3; }
+.highlight .nc { color: #445588; font-weight: bold; }
+.highlight .no { color: teal; }
+.highlight .ni { color: purple; }
+.highlight .ne { color: #990000; font-weight: bold; }
+.highlight .nf { color: #990000; font-weight: bold; }
+.highlight .nn { color: #555555; }
+.highlight .nt { color: navy; }
+.highlight .nv { color: teal; }
+.highlight .ow { font-weight: bold; }
+.highlight .w { color: #bbbbbb; }
+.highlight .mf { color: #009999; }
+.highlight .mh { color: #009999; }
+.highlight .mi { color: #009999; }
+.highlight .mo { color: #009999; }
+.highlight .sb { color: #dd1144; }
+.highlight .sc { color: #dd1144; }
+.highlight .sd { color: #dd1144; }
+.highlight .s2 { color: #dd1144; }
+.highlight .se { color: #dd1144; }
+.highlight .sh { color: #dd1144; }
+.highlight .si { color: #dd1144; }
+.highlight .sx { color: #dd1144; }
+.highlight .sr { color: #009926; }
+.highlight .s1 { color: #dd1144; }
+.highlight .ss { color: #990073; }
+.highlight .bp { color: #999999; }
+.highlight .vc { color: teal; }
+.highlight .vg { color: teal; }
+.highlight .vi { color: teal; }
+.highlight .il { color: #009999; }
+.highlight .gc { color: #999; background-color: #EAF2F5; }
